; ModuleID = '/home/carl/AnghaBench/tmux/extr_grid-view.c_grid_view_delete_cells.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_grid-view.c_grid_view_delete_cells.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grid = type { i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @grid_view_delete_cells(%struct.grid* %0, i64 %1, i64 %2, i64 %3, i64 %4) #0 {
  %6 = alloca %struct.grid*, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64, align 8
  store %struct.grid* %0, %struct.grid** %6, align 8
  store i64 %1, i64* %7, align 8
  store i64 %2, i64* %8, align 8
  store i64 %3, i64* %9, align 8
  store i64 %4, i64* %10, align 8
  %12 = load %struct.grid*, %struct.grid** %6, align 8
  %13 = load i64, i64* %7, align 8
  %14 = call i64 @grid_view_x(%struct.grid* %12, i64 %13)
  store i64 %14, i64* %7, align 8
  %15 = load %struct.grid*, %struct.grid** %6, align 8
  %16 = load i64, i64* %8, align 8
  %17 = call i64 @grid_view_y(%struct.grid* %15, i64 %16)
  store i64 %17, i64* %8, align 8
  %18 = load %struct.grid*, %struct.grid** %6, align 8
  %19 = load %struct.grid*, %struct.grid** %6, align 8
  %20 = getelementptr inbounds %struct.grid, %struct.grid* %19, i32 0, i32 0
  %21 = load i64, i64* %20, align 8
  %22 = call i64 @grid_view_x(%struct.grid* %18, i64 %21)
  store i64 %22, i64* %11, align 8
  %23 = load %struct.grid*, %struct.grid** %6, align 8
  %24 = load i64, i64* %7, align 8
  %25 = load i64, i64* %7, align 8
  %26 = load i64, i64* %9, align 8
  %27 = add nsw i64 %25, %26
  %28 = load i64, i64* %8, align 8
  %29 = load i64, i64* %11, align 8
  %30 = load i64, i64* %7, align 8
  %31 = sub nsw i64 %29, %30
  %32 = load i64, i64* %9, align 8
  %33 = sub nsw i64 %31, %32
  %34 = load i64, i64* %10, align 8
  %35 = call i32 @grid_move_cells(%struct.grid* %23, i64 %24, i64 %27, i64 %28, i64 %33, i64 %34)
  %36 = load %struct.grid*, %struct.grid** %6, align 8
  %37 = load i64, i64* %11, align 8
  %38 = load i64, i64* %9, align 8
  %39 = sub nsw i64 %37, %38
  %40 = load i64, i64* %8, align 8
  %41 = load i64, i64* %7, align 8
  %42 = load i64, i64* %9, align 8
  %43 = add nsw i64 %41, %42
  %44 = load i64, i64* %11, align 8
  %45 = load i64, i64* %9, align 8
  %46 = sub nsw i64 %44, %45
  %47 = sub nsw i64 %43, %46
  %48 = load i64, i64* %10, align 8
  %49 = call i32 @grid_clear(%struct.grid* %36, i64 %39, i64 %40, i64 %47, i32 1, i64 %48)
  ret void
}

declare dso_local i64 @grid_view_x(%struct.grid*, i64) #1

declare dso_local i64 @grid_view_y(%struct.grid*, i64) #1

declare dso_local i32 @grid_move_cells(%struct.grid*, i64, i64, i64, i64, i64) #1

declare dso_local i32 @grid_clear(%struct.grid*, i64, i64, i64, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
